# easynet

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: run_build.yml
config/: easynet.yaml
proto/: message.proto
src/: client.rs  common.rs  config.rs  main.rs  server.rs  tun_device.rs
src/codec/: codec.rs  mod.rs
src/rules/: action.rs  context.rs  decision.rs  domain_cache.rs  engine.rs  geoip.rs  lib.rs  matcher.rs  rule.rs
src/transparent_proxy/: icmp_proxy.rs  mod.rs  tcp_proxy.rs  udp_proxy.rs
src/transport/: iroh.rs  mod.rs  tcp.rs  transport.rs  udp.rs  ws.rs
