[package]
name = "easynet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easynet"
path = "src/main.rs"

[lib]
name = "easynet_rules"
path = "src/rules/lib.rs"

[dependencies]
tun2 = { version = "4.0", features = ["async"] }
ipnetwork = "0.20"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
etherparse = "0.19.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
socket2 = { version = "0.5", features = ["all"] }
socket2-ext = "0.1.1"
libc = "0.2"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
url = "2.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
prost = "0.12"
nanoid = "0.4"
lazy_static = "1.4"
smoltcp = { git = "https://github.com/Augus2026/smoltcp.git", branch = "transparent_proxy", default-features = false, features = [
    "std",
    "async",
    "socket-tcp",
    "socket-udp",
    "socket-raw",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
] }
tokio-smoltcp = { git = "https://github.com/Augus2026/tokio-smoltcp.git", branch = "transparent_proxy" }

[build-dependencies]
prost-build = "0.12"

[patch.crates-io]
smoltcp = { git = "https://github.com/Augus2026/smoltcp.git", branch = "transparent_proxy" }
