[package]
name = "easynet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easynet"
path = "src/main.rs"

[dependencies]
tun2 = { version = "4.0", features = ["async"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
url = "2.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
prost = "0.14"
nanoid = "0.5"
lazy_static = "1.4"
iroh = "1.0.0-rc.0"

[build-dependencies]
prost-build = "0.14"
